[gd_scene load_steps=2 format=3 uid="uid://dcbjrvwwf06gb"]

[ext_resource type="Script" uid="uid://ce0fihk5by6wu" path="res://scenes/ui/options_menu/options_menu.gd" id="1_7iv5r"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_7iv5r")

[node name="Page" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Page/Header"]
layout_mode = 2
text = "‚ù§Ô∏è‚Äçüî• MusikMon ü™ó
‚öôÔ∏è Optionen ‚öôÔ∏è"
horizontal_alignment = 1

[node name="Content" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Footer" type="VBoxContainer" parent="Page"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonSet" type="VBoxContainer" parent="Page/Footer"]
layout_mode = 2
alignment = 1

[node name="Mainmenu" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "üìá Hauptmen√º"

[node name="Intro" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "üé• Intro"

[node name="Credits" type="Button" parent="Page/Footer/ButtonSet"]
layout_mode = 2
text = "üìú Credits"

[connection signal="pressed" from="Page/Footer/ButtonSet/Mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Page/Footer/ButtonSet/Intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="Page/Footer/ButtonSet/Credits" to="." method="_on_credits_pressed"]
